# arbor

./: CLAUDE.md  Cargo.toml  README.md
benches/: Cargo.toml  capacity_results.csv
benches/benches/: authorization.rs
benches/scripts/: capacity_sweep.sh
benches/src/: lib.rs
crates/arbor-bytecode/: Cargo.toml
crates/arbor-bytecode/src/: ast_evaluator.rs  bytecode_vm.rs  compiler.rs  lib.rs
crates/arbor-bytecode/tests/: compatibility_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/arbor-connectors/: Cargo.toml
crates/arbor-connectors/src/: condition_parser.rs  lib.rs
crates/arbor-graph-core/: Cargo.toml
crates/arbor-graph-core/src/: graph.rs  lib.rs  mutations.rs  types.rs
crates/arbor-index-snapshot/: Cargo.toml
crates/arbor-index-snapshot/src/: lib.rs
crates/arbor-proto-internal/: Cargo.toml  build.rs
crates/arbor-proto-internal/proto/arbor/v1/: arbor.proto
crates/arbor-proto-internal/src/: lib.rs
crates/arbor-types/: Cargo.toml
crates/arbor-types/src/: actions.rs  attributes.rs  bytecode.rs  conditions.rs  constants.rs  entities.rs  errors.rs  evaluation.rs  ids.rs  lib.rs  policies.rs  rkyv_with.rs
docs/: README.md  arbor-pg.md  architecture.md  authorization-flow.md  authorizer-guide.md  bytecode-vm.md  client-libraries.md  connectors.md  data-model.md  filter-generation.md  healthcare-benchmark-results.md  implementation-plan-phase1-with-ysnp.md  implementation-plan-phase1.md  implementation-roadmap.md  policy-validation.md  pub-sub-protocol.md  snapshot-format.md  ysnp-comparison.md
services/arbor-authorizer/: Cargo.toml
services/arbor-authorizer/src/: config.rs  engine.rs  main.rs  service.rs
services/arbor-indexer/: Cargo.toml
services/arbor-indexer/src/: closures.rs  csv_source.rs  example_graph.rs  lib.rs  main.rs  service.rs  snapshot_builder.rs
services/arbor-indexer/tests/: snapshot_tests.rs
