[package]
name = "arbor-index-snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
arbor-types = { path = "../arbor-types" }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rapidhash = "4.1.1"
roaring = { version = "0.11.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
lz4_flex = "0.11"
thiserror = "2"
rkyv = { version = "0.8", features = ["uuid-1", "pointer_width_64"] }
self_cell = "1"
