[package]
name = "arbor-types"
version = "0.1.0"
edition = "2024"

[dependencies]
roaring = { version = "0.11.2", features = ["serde"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
ordered-float = { version = "5.1.0", features = ["serde"] }
smallvec = "2.0.0-alpha.12"
ipnet = { version = "2.11.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.8", features = ["uuid-1", "pointer_width_64"] }

[features]
test_utils = []
