[package]
name = "arbor-indexer"
version = "0.1.0"
edition = "2024"

[lib]
name = "arbor_indexer"
path = "src/lib.rs"

[dependencies]
arbor-types = { path = "../../crates/arbor-types" }
arbor-graph-core = { path = "../../crates/arbor-graph-core" }
arbor-index-snapshot = { path = "../../crates/arbor-index-snapshot" }
arbor-bytecode = { path = "../../crates/arbor-bytecode" }
uuid = { version = "1.18.1", features = ["v4"] }
roaring = "0.11.2"
rapidhash = "4.1.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }

[dev-dependencies]
ipnet = "2.11.0"
